@@ -213,6 +213,4 @@ capplets/accessibility/keyboard/Makefile
 capplets/network/Makefile
 capplets/windows/Makefile
 schemas/Makefile
-help/Makefile
-help/C/Makefile
 libsounds/Makefile])
