@@ -1,1 +1,2 @@
-SUBDIRS = C
+# Disabled the docs are in gnome-user-guide
+# SUBDIRS = C
